<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.home.MainActivity">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

        <TextView
                android:text="@string/welcome_to_alc_4_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16"
                android:id="@+id/textView"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:textAlignment="center"
        android:fontFamily="@font/montserrat_semibold"/>
        <com.google.android.material.button.MaterialButton
                android:text="@string/about_alc"
                app:cornerRadius="4dp"
                android:id="@+id/about_alc_button"
                style="@style/NavigationButton"
                android:layout_gravity="center"
        />
        <com.google.android.material.button.MaterialButton
                android:text="@string/my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_button"
                style="@style/NavigationButton"
                app:cornerRadius="4dp"

        />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>